# music-mic

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json
assets/: main.css
examples/: devices.rs
src/: config.rs  input.css  main.rs
src/audio/: devices.rs  mic_source.rs  mod.rs  ring.rs  sck_source.rs  sink.rs  types.rs  voice_processing.rs
src/ui/: components.rs  main_view.rs  mod.rs  setup.rs
